--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,13 @@
 {
   "bot-account": {
-    "username": "bot",
+    "username": "BOT",
     "password": "",
     "type": "mojang"
   },
 
   "server": {
-    "ip": "mr_udayip.aternos.me",
-    "port": 19570,
+    "ip": "118botsed.aternos.me",
+    "port": 39531,
     "version": "1.19"
   },
 
